# multi-except

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  flake.nix  hie.yaml  multi-except.cabal  shell.nix
.github/workflows/: haskell-ci.yml  test.yml
.hie/Control/Applicative/: MultiExcept.hie
Control/Applicative/: MultiExcept.hs
multi-except-semigroupoids/Control/Applicative/MultiExcept/: Alt.hs
multi-except/Control/Applicative/: MultiExcept.hs
nix/: sources.json
test/: Main.hs
test/Test/: Alt.hs  Applicative.hs  Bifunctor.hs  Foldable.hs  Functor.hs  Traversable.hs
test/Test/MultiExcept/: Alt.hs  Applicative.hs  Bifunctor.hs  Foldable.hs  Functor.hs  Traversable.hs
