cabal-version:       >=1.10

name:                multi-except
version:             0.3.0.0
synopsis:            Multiple Exceptions
description:         Exception type that supports reporting multiple exceptions
license:             MIT
license-file:        LICENSE
author:              Owen Shepherd
maintainer:          owen@owen.cafe
category:            Exceptions
build-type:          Simple
extra-source-files:  CHANGELOG.md
homepage:            https://github.com/414owen/multi-except

flag semigroupoids
  description: Depend on the semigroupoids package, and provide an instance of Alt.
  default: False
  manual: True

library
  exposed-modules:     Control.Applicative.MultiExcept
  if flag(semigroupoids)
    cpp-options:      -DSemigroupoids
  build-depends:       base >=4.0 && <5
                     , dlist
  default-language:    Haskell2010
  if flag(semigroupoids)
    build-depends:    semigroupoids

test-suite unit-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Test.MultiExcept.Functor
                    , Test.MultiExcept.Applicative
                    , Test.MultiExcept.Alt
                    , Test.MultiExcept.Bifunctor
                    , Test.MultiExcept.Foldable
                    , Test.MultiExcept.Traversable
  build-depends:      base
                    , multi-except
                    , hspec
                    , semigroupoids
