cabal-version:       3.0

name:                multi-except
version:             0.3.0.0
synopsis:            Multiple Exceptions
description:         Exception type that supports reporting multiple exceptions
license:             MIT
license-file:        LICENSE
author:              Owen Shepherd
maintainer:          owen@owen.cafe
category:            Exceptions
build-type:          Simple
extra-source-files:  CHANGELOG.md
homepage:            https://github.com/414owen/multi-except

tested-with:
    GHC==9.6.2
  , GHC==9.4.5
  , GHC==9.2.8
  , GHC==9.0.2
  , GHC==8.10.7
  , GHC==8.8.4
  , GHC==8.6.5
  , GHC==8.4.4
  , GHC==8.2.2
  , GHC==8.0.2
  , GHC==7.10.3
  , GHC==7.8.4
  , GHC==7.6.3
  , GHC==7.4.2
  , GHC==7.2.2
  , GHC==7.0.4

common common-import
  default-language:    Haskell2010
  ghc-options:         -Wall -Wextra

flag semigroupoids
  description: Depend on the semigroupoids package, and provide an instance of Alt.
  default: False
  manual: True

library
  import:              common-import
  exposed-modules:     Control.Applicative.MultiExcept
  hs-source-dirs:      multi-except
  build-depends:       base >=4.0 && <5
                     , dlist

library semigroupoid-instances
  import:              common-import
  exposed-modules:     Control.Applicative.MultiExcept.Alt
  hs-source-dirs:      multi-except-semigroupoids
  build-depends:       base >=4.0 && <5
                     , dlist
                     , multi-except
                     , semigroupoids

test-suite unit-tests
  import:             common-import
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Test.MultiExcept.Functor
                    , Test.MultiExcept.Applicative
                    , Test.MultiExcept.Alt
                    , Test.MultiExcept.Bifunctor
                    , Test.MultiExcept.Foldable
                    , Test.MultiExcept.Traversable
  build-depends:      base
                    , multi-except
                    , multi-except:semigroupoid-instances
                    , hspec
                    , semigroupoids
